added Tapper files

--- a/tapper/Base.lproj/Main.storyboard
+++ b/tapper/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tapper" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,94 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retrobg" translatesAutoresizingMaskIntoConstraints="NO" id="nmQ-l2-87C">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="qR1-iE-8nE" userLabel="logo">
+                                <rect key="frame" x="106" y="44" width="388" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="9Uv-mw-CH7"/>
+                                    <constraint firstAttribute="width" constant="388" id="eRA-vm-EIc"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="foy-wE-SUM" userLabel="play-button">
+                                <rect key="frame" x="176" y="430" width="249" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="0fq-K7-M7P"/>
+                                    <constraint firstAttribute="width" constant="249" id="4Qt-zd-o41"/>
+                                </constraints>
+                                <state key="normal" image="playbtn"/>
+                                <connections>
+                                    <action selector="OnPlay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="36c-AD-NZA"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fwA-pS-3Bn" userLabel="tap-txt">
+                                <rect key="frame" x="176" y="378" width="249" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="WYR-qy-P8j"/>
+                                    <constraint firstAttribute="width" constant="249" id="aBy-DJ-7Rh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n4i-I0-ND7" userLabel="coin-button">
+                                <rect key="frame" x="214" y="28" width="172" height="177"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="177" id="JRy-ah-Jcy"/>
+                                    <constraint firstAttribute="width" constant="172" id="mFR-gv-UER"/>
+                                </constraints>
+                                <state key="normal" image="coin"/>
+                                <connections>
+                                    <action selector="OnCoinTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wgx-Tn-FSN"/>
+                                </connections>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="100 Taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQD-lU-KHd" userLabel="tap-label">
+                                <rect key="frame" x="176" y="269" width="249" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="aGg-MF-BlF"/>
+                                    <constraint firstAttribute="width" constant="249" id="pOj-Ut-iX7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
+                                <color key="textColor" red="0.99740265052356025" green="0.99740265052356025" blue="0.99740265052356025" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nmQ-l2-87C" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8Mm-eW-HeZ"/>
+                            <constraint firstItem="eQD-lU-KHd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Elj-sD-g1g"/>
+                            <constraint firstItem="n4i-I0-ND7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Njc-TU-1Lh"/>
+                            <constraint firstItem="n4i-I0-ND7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PYO-5e-4bt"/>
+                            <constraint firstItem="foy-wE-SUM" firstAttribute="centerX" secondItem="fwA-pS-3Bn" secondAttribute="centerX" id="S6e-XR-QhI"/>
+                            <constraint firstItem="qR1-iE-8nE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Unm-d9-NVM"/>
+                            <constraint firstItem="foy-wE-SUM" firstAttribute="top" secondItem="fwA-pS-3Bn" secondAttribute="bottom" constant="22" id="WCq-cE-Upx"/>
+                            <constraint firstAttribute="trailing" secondItem="nmQ-l2-87C" secondAttribute="trailing" id="WMl-4O-FQ6"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="foy-wE-SUM" secondAttribute="bottom" constant="50" id="Wx4-V9-F8g"/>
+                            <constraint firstItem="foy-wE-SUM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cw2-5k-bgK"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nmQ-l2-87C" secondAttribute="bottom" id="eas-mQ-2IB"/>
+                            <constraint firstItem="nmQ-l2-87C" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="fbP-Ts-OTa"/>
+                            <constraint firstItem="eQD-lU-KHd" firstAttribute="top" secondItem="n4i-I0-ND7" secondAttribute="bottom" constant="33" id="ijt-HC-JQd"/>
+                            <constraint firstItem="qR1-iE-8nE" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="24" id="pqW-R8-nJT"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="howManyTapsTxt" destination="fwA-pS-3Bn" id="zy0-wQ-Gmb"/>
+                        <outlet property="logoImg" destination="qR1-iE-8nE" id="5NZ-bF-DBT"/>
+                        <outlet property="playButton" destination="foy-wE-SUM" id="Cnq-CX-Y7J"/>
+                        <outlet property="tapButton" destination="n4i-I0-ND7" id="sV2-EB-u83"/>
+                        <outlet property="tapsLabel" destination="eQD-lU-KHd" id="E7n-uK-8BZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="521" y="346"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Tapper" width="497" height="107"/>
+        <image name="coin" width="244" height="268"/>
+        <image name="playbtn" width="356" height="175"/>
+        <image name="retrobg" width="800" height="800"/>
+    </resources>
 </document>
